--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "externals/reshade"]
 	path = externals/reshade
 	url = https://github.com/crosire/reshade
+[submodule "detours"]
+	path = externals/detours
+	url = https://github.com/microsoft/Detours
